@@ -18,11 +18,12 @@ Version 2.1.3
    - Bugfix: Check pointers in callbacks (in "src/gui.cc")
    - Bugfix: 64bit problem (debian bug #301853); note: The same problem is
         still present multiple times in the code; added this to TODO file;
-        thanks to David Mosberger for reporting this bug
+        thanks to David Mosberger for reporting and fixing this bug
    - Added David Mosberger to contributors
    - Bugfix: Corrected string size types in "src/decoding.*", "src/mailbox.*"
         "src/apop.*", "src/imap4.*", "src/maildir.*", "src/biff.*",
-        "src/gtk_image_animation.*" and "src/support.*" (64bit systems)
+        "src/gtk_image_animation.*", "src/option.*" and "src/support.*"
+        (64bit systems)
    - Checked files for incorrect string size type without problems:
         "src/pop.*", "src/maildir.*", "src/file.*", "src/gnubiff.*" and
         "src/pop3.*"
